--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -18,15 +18,15 @@
 <body>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <a class="navbar-brand" href="/">
-    <img src="/Images/airplane.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/ANA_777-300_Taking_off_from_JFK.jpg/220px-ANA_777-300_Taking_off_from_JFK.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
     FightAware
   </a>
   
     <li class="nav-item">
-      <a class="btn btn-success " href="/fprice" role="button">Flight Prices</a>
-      <a class=" btn btn-success " href="/routes" role="button">Routes</a>
-      <a class=" btn btn-success " href="/dprice" role="button">Flight Dates</a>
-      <a class=" btn btn-success " href="/uguides" role="button">User Guides</a>
+      <a class="btn btn-success " href="fprice.html" role="button">Flight Prices</a>
+      <a class=" btn btn-success " href="route.html" role="button">Routes</a>
+      <a class=" btn btn-success " href="fprice.html" role="button">Flight Dates</a>
+      <a class=" btn btn-success " href="uguide.html" role="button">User Guides</a>
       
     </li>
       
@@ -36,7 +36,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/Images/home.jpg"width="800" height="400"  alt="India">
+      <img class="d-block w-100" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Leaning_Tower_of_Pisa_%28April_2012%29.jpg/1200px-Leaning_Tower_of_Pisa_%28April_2012%29.jpg"width="1000" height="1000"  alt="India">
     </div>
   </div>
   
