--- a/rithika/src/main/resources/templates/loginHome.html
+++ b/rithika/src/main/resources/templates/loginHome.html
@@ -36,7 +36,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://images.unsplash.com/photo-1543349689-9a4d426bee8e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZWlmZmVsJTIwdG93ZXJ8ZW58MHx8MHx8&w=1000&q=80"width="900" height="1000"  alt="India">
+      <img class="https://www.visiteosusa.com.br/sites/default/files/styles/16_9_1280x720/public/images/hero_media_image/2017-02/HERO_01_Getty_478985378_City_Miami_Golden_CROP_Web72DPI.jpg?h=89e96047&itok=ajF4nKER"width="900" height="1000"  alt="India">
     </div>
   </div>
   
